--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,8 @@ img.slideshow {
     transition: opacity .5s ease-in;
     top: 80px;
     width: 100%;
+     max-height: 500px;
+    max-width: 1260px;
 }
 
 img.slideshow + img.slideshow {
