--- a/css/styles.css
+++ b/css/styles.css
@@ -165,8 +165,7 @@ img.slideshow {
     transition: opacity .5s ease-in;
     top: 80px;
     width: 100%;
-     max-height: 500px;
-    max-width: 100%;
+    height: 500px;
 }
 
 img.slideshow + img.slideshow {
