--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ img.slideshow {
     transition: opacity .5s ease-in;
     top: 80px;
     width: 100%;
-    height: 500px;
+    max-height: 500px;
 }
 
 img.slideshow + img.slideshow {
